# mapit-msgs

./: .gitignore  .gitmodules  CMakeLists.txt  datastructs.proto  services.proto  services_internal.proto
cmake/: mapitInterfaceConfig.cmake  mapit_interfaceConfig.cmake
comm_example/: CMakeLists.txt  client.cpp  server.cpp
comm_example_zeromq/: CMakeLists.txt  client.cpp  server.cpp  zmq_pair.cpp  zmq_pair.h
comm_example_zeromq/cmake/Modules/: FindZMQ.cmake
messages/: cs_comm.proto  datastructs.proto  services.proto  services_internal.proto  transport.proto
